source/_patterns/02-molecules/card/_card.scss
$_config_schemes: (
  base: (
    border-width: "05",
    hover-border-width: "05",
    // Should be set by $theme-card-border-radius
    border-radius-container: "none",
    border-radius-img: 0,
    border-color: "base-lightest",
    hover-border-color: "base-lightest",
    hover-shadow: 3,
    hover-link-underline: underline,
    brow-position: "absolute",
    brow-top: 3rem,
    brow-color: base-dark,
    brow-bgcolor: "transparent",
    brow-size: 6,
    brow-weight: $theme-font-weight-normal,
    brow-icon-color: "gray-80",
    heading-container-top: 6,
    heading-top-space: 0,
    heading-size: 11,
    heading-line-height: $theme-body-line-height,
    title-color: primary-darker,
    hover-title-color: primary-vivid,
    hover-title-icon-color: secondary,
    title-link: (
      default: primary,
      hover: primary-dark,
      active: primary-darker,
    ),
    body-size: 6,
    action-button: (
      "jcc-button--secondary",
    ),
    action-button-justify: "justify",
    icon-color: primary-light,
    overlay-bgcolors: (
      none: "transparent",
      blue: "#005EA2",
      blue-dark: "#0B4778",
      cyan: "#2A646D",
      gray: "#5C5C5C",
      green: "#15816E",
      magenta: "#8B4566",
      mint: "#40807E",
      orange: "#D0744D",
      red: "#CC6161",
    ),
  ),
  local: (
    border-width: "05",
    hover-border-width: "1px",
    // Should be set by $theme-card-border-radius
    border-radius-container: "none",
    border-radius-img: 0,
    border-color: "base-lighter",
    hover-border-color: "base-light",
    brow-position: "absolute",
    brow-top: 1.3rem,
    brow-color: "gray-90",
    brow-bgcolor: "transparent",
    brow-icon-color: "gray-80",
    heading-container-top: 6,
    heading-top-space: 0,
    hover-title-icon-color: secondary,
    title-link: (
      default: primary-vivid,
    ),
    action-button: (
      "jcc-button--cta-link",
    ),
    action-button-justify: "justify",
    overlay-bgcolors: (
      none: "transparent",
      blue: "#005EA2",
      blue-dark: "#0B4778",
      cyan: "#2A646D",
      gray: "#5C5C5C",
      green: "#15816E",
      magenta: "#8B4566",
      mint: "#40807E",
      orange: "#D0744D",
      red: "#CC6161",
    ),
  ),
  pro: (
    border-width: "1px",
    hover-border-width: "1px",
    border-radius-container: $theme-card-border-radius,
    border-radius-img: 0.2rem,
    border-color: "base-light",
    hover-border-color: "base-light",
    hover-shadow: none,
    hover-link-underline: no-underline,
    brow-position: "relative",
    brow-top: 0,
    brow-color: "white",
    brow-size: 5,
    brow-weight: $theme-font-weight-normal,
    brow-bgcolor: "gray-90",
    brow-icon-color: "gray-80",
    heading-container-top: 0,
    heading-top-space: 6,
    heading-size: $theme-h2-font-size,
    heading-line-height: $theme-body-line-height,
    title-color: "gray-warm-90",
    hover-title-color: $theme-link-color,
    hover-title-icon-color: $theme-link-color,
    title-link: (
      default: $theme-link-color,
      hover: $theme-link-hover-color,
      active: $theme-link-active-color,
    ),
    action-button: (
      "jcc-button--cta-link",
    ),
    action-button-justify: "justify-start",
    body-size: 5,
    overlay-bgcolors: (
      none: "transparent",
      blue-dark: "#0B4778",
      cyan: "#2A646D",
      gray: "#5C5C5C",
      green: "#15816E",
      magenta: "#8B4566",
      mint: "#40807E",
      orange: "#D0744D",
      red: "#CC6161",
    ),
  ),
);

$_config: map-merge-by-keys($_config_schemes, base, $_config_schemes, $scheme);

.usa-card {
  @include u-height(full);
  @include u-text-decoration(no-underline);
}

.usa-card--hover {
  @include u-display(block);
  @include u-text-decoration(no-underline);
}

.usa-card__container {
  @include u-border(map-get($_config, border-color));
  @include u-border-width(map-get($_config, border-width));
  @include u-radius(map-get($_config, border-radius-container));
  @include u-padding(3);
  @include u-z(0);

  .usa-card--hover & {
    @include u-border(map-get($_config, hover-border-color));
    @include u-border-width(map-get($_config, hover-border-width));
    @include u-radius($theme-card-border-radius);
    @include u-shadow(map-get($_config, hover-shadow));
    @include u-text-decoration(no-underline);
    transition: box-shadow 0.4s;

    &:active,
    &:hover {
      @include u-shadow(none);

      div[class^="jcc-card--overlay-color-"] {
        opacity: 0.9;
      }
    }
  }

  .usa-card--borderless & {
    @include u-padding(0);
    @include u-padding-right(3);
    @include u-border-width(0);
    @include u-bg("transparent");

    .usa-card__heading a:hover {
      @include u-text-decoration(map-get($_config, hover-link-underline));
      text-decoration-thickness: 2px;
    }

    .usa-card__media {
      span {
        border-radius: map-get($_config, border-radius-img);
      }
    }
  }

  .usa-card--media-left & {
    @include at-media(tablet) {
      @include grid-row();
      @include u-flex(no-wrap);
      @include u-flex-direction(row);
      @include u-padding-x(4);
    }

    .usa-card__brow {
      @include u-position(relative);
      @include u-top(1);
      @include u-top(1);
    }

    .usa-card__header {
      @include u-padding-top(0);
    }
  }

  .usa-card--media-full &,
  .usa-card--media-top &,
  .usa-card--media-full-overlay &,
  .usa-card--media-top-overlay & {
    min-height: 250px;

    .usa-card__header {
      @include u-color("white");

      .usa-card__heading {
        @include u-color("white");
      }
    }

    .usa-card__icon-no-brow {
      @include u-color("white");
    }

    .usa-card__icon {
      @include u-color("white");
    }

    .usa-card__media {
      @include u-z(bottom);
      @include u-width(full);

      img,
      picture {
        @include u-width(full);
        border-radius: map-get($_config, border-radius-img);
        object-position: 50% 50%;
        object-fit: cover;
      }
    }
  }

  .usa-card--media-full-overlay &,
  .usa-card--media-top-overlay & {
    .usa-card__media {
      @each $overlay-bgcolor, $color-value in map-get($_config, overlay-bgcolors) {
        @if $overlay-bgcolor {
          .jcc-card--overlay-color-#{$overlay-bgcolor} {
            @include u-display(inline-flex);
            @include u-position(absolute);
            @include u-top(0);
            @include u-left(0);
            @include u-width(full);
            background-color: #{$color-value};
            border-radius: map-get($_config, border-radius-img);
          }
        }
      }

      img,
      picture {
        object-position: 50% 50%;
        opacity: 0.1;
      }

      .jcc-card--overlay-color-none {
        @include u-width(full);
        @include u-radius($theme-card-border-radius);

        img {
          opacity: 1;
        }
      }
    }
  }

  .usa-card--media-full & {
    .jcc-card--overlay-color-none {
      @include u-display(inline-flex);
      @include u-position(absolute);
      @include u-top(0);
      @include u-left(0);
      @include u-width(full);
    }
    img,
    picture {
      @include u-radius($theme-card-border-radius);
      object-position: 50% 50%;
      opacity: 1;
      border-radius: map-get($_config, border-radius-img);
    }
  }

  .usa-card--media-full &,
  .usa-card--media-full-overlay & {
    @include u-color("white");

    .usa-card__brow-color {
      @include u-color("white");
    }

    .usa-card__body {
      @include u-color("white");
    }

    .usa-card__media {
      & > div {
        bottom: 0;
      }
      img,
      picture {
        //@include u-minh(viewport);
        //@include u-width(auto);
        //@include u-maxw(none);
        min-height: 100%;
      }

      &::after {
        @include u-height(full);
      }
    }

    .usa-card__footer a {
      @include u-color("white");
      &::after {
        @include u-bg("white");
      }
    }
  }

  .usa-card--media-top &,
  .usa-card--media-top-overlay & {
    .usa-card__header {
      @include u-position(relative);
      @include u-padding(0);
      height: calc(14rem - 28px);

      .usa-card__heading {
        @include u-position(absolute);
        @include u-bottom(1);
        white-space: nowrap;
      }
    }

    .usa-card__media {
      @each $overlay-bgcolor, $color-value in map-get($_config, overlay-bgcolors) {
        @if $overlay-bgcolor {
          .jcc-card--overlay-color-#{$overlay-bgcolor} {
            @include u-radius-bottom("none");
          }
        }
      }

      .jcc-card--overlay-color-none {
        @include u-radius-bottom("none");
      }

      img,
      picture {
        height: 14rem;
      }
    }
  }
}

.usa-card:not(.usa-card--flag) .usa-card__container > :only-child {
  @include u-padding(0);
}

.usa-card__content {
  @include u-display(flex);
  @include u-flex-direction(column);
  @include u-justify-content(justify);
  @include u-width(full);
  @include u-height(full);
}

.usa-card__header {
  @include u-padding-top(map-get($_config, heading-container-top));
  @include u-padding-bottom(0);
}

.usa-card__heading {
  @include u-color(map-get($_config, title-color));
  @include typeset(body, map-get($_config, heading-size), map-get($_config, heading-line-height));

  .usa-card--hover & {
    @include u-color(map-get($_config, hover-title-color));
  }
  .usa-card--hover:hover & {
    @include u-text-decoration(map-get($_config, hover-link-underline));
    text-decoration-thickness: 2px;
  }
  .usa-card--hover.file &,
  .usa-card--hover.ext & {
    @extend %jcc-inline-icon-link;

    &::after {
      @include u-width(2.5);
      @include u-height(2.5);
      @include u-bg(map-get($_config, hover-title-icon-color));
    }
  }
  .usa-card--hover.ext & {
    &::after {
      mask-image: url("../icons/fa/external-link.svg");
    }
  }
  .usa-card--hover.file & {
    &::after {
      mask-image: url("../icons/fa/file.svg");
    }
  }

  a {
    @include link-colors(map-get($_config, title-link));
    @include u-text-decoration(no-underline);

    &.ext {
      @extend %jcc-inline-icon-link;

      &::after {
        mask-image: url("../icons/fa/external-link.svg");
      }
    }
  }
}

.usa-card__brow {
  @include u-position(map-get($_config, brow-position));
  @include u-margin-bottom(1);
  @include u-order(0);
  letter-spacing: 0.09px;
  @include typeset(body, map-get($_config, brow-size), $theme-body-line-height);
  top: map-get($_config, brow-top);
  font-weight: map-get($_config, brow-weight);

  .usa-card__brow-color,
  .usa-card__brow-color > div:first-child {
    @include u-display(inline);
    @include u-radius-right("md");
    @include u-bg(map-get($_config, brow-bgcolor));
    @include u-color(map-get($_config, brow-color));
    @include u-margin-left("neg-3");
    @include u-padding(1);
    padding-left: 23px;
  }
}

.usa-card__brow + .usa-card__heading {
  @include u-padding-top(map-get($_config, heading-top-space));
}

.usa-card__icon {
  @include u-float("right");
  @include u-color(map-get($_config, brow-icon-color));

  .icon {
    width: 32px;
    height: 24px;
  }
}

.usa-card__icon-no-brow {
  @include u-color(map-get($_config, brow-icon-color));

  .icon {
    width: 32px;
    height: 24px;
  }
}

.usa-card__footer {
  @include u-margin-top(4);

  .usa-card--media-left & {
    @include u-margin-top(0.5);
  }

  a {
    @each $button in map-get($_config, action-button) {
      @extend .#{$button};
      @include u-justify-content(map-get($_config, action-button-justify));
    }
    &::after {
      @include u-width(2);
      @include u-height(2);
    }
  }
}

.usa-card__media {
  @include u-margin-right(5);
  @include u-color(map-get($_config, icon-color));
  .icon {
    width: 80px;
    height: 80px;
  }
}

.usa-card__body {
  @include typeset(body, map-get($_config, body-size), $theme-body-line-height);

  h3,
  h4 {
    @include u-margin-bottom(3);
  }

  .usa-card--hover & {
    @include u-color(ink);
  }
}

